--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,6 @@
 * {
   font-family:'Poppins', Tahoma, Geneva, Verdana, sans-serif;
   font-size: medium;
+  color: black;
+  background-color: #FFFFFF;
 }
